修改了前端展示以及领域模型
